@@ -51,7 +51,7 @@ public class ShadowedRuleValidator extends SimpleValidator<DecisionTable> {
                         rules.stream(),
                         (n, rule) -> identifySubsumedRules(n, rule, rules))
                 .flatMap(Function.identity())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Stream<ValidationResult> identifySubsumedRules(
